# song_translator_flask

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: config.py  models.py  resource.py  schema.py  services.py  song_translator.py  urls.py  utils.py
api/migrations/versions/: 0618a0517021_.py  401747e786d9_create_tables_with_timestamp.py  4c386d5f874c_.py  573cc162db15_.py  5fb3935a3425_.py  751506d15bd1_.py  8be737ccc900_.py  b4258fa48c14_.py  bb1650639b58_add_nullable_attribute.py  c59645154059_.py  d1859e7c3617_.py  da9f6c66d78e_.py  df93799a22ad_.py  eaf5520c317b_.py  ee9cef170a5a_.py
